--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </p>
         <p>
         <p>
-
         On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District could have an opportunity to vote in a
         referendum to replace the 'Leader and Cabinet' system with the Modern Committee model. The District
         Council is currently set up so that all decision-making power is concentrated in the hands of the Leader
         and seven Lib Dem councillors (all appointed by the Leader), called the Cabinet.
+        </p>
         <p>
         <p>
         The other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out.
@@ -32,20 +32,22 @@
         </p>
         <p>
         <p>
-        3,502 signatures from residents of the Cotswold District would, by law, trigger a referendum and provide for
-        an open, fair and inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the more
-        democratic <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank' rel='noreferrer'>Modern Committee
-        system</a>.
+        3,502 signatures from residents of the Cotswold District (one twentieth of the total) would, by law, trigger a referendum
+        and provide for an inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the fairer and
+        more democratic <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank' rel='noreferrer'>Modern Committee system</a>.
         </p>
+        <p>
+        <p>
         <div class="img-container">
         <img src="image1.jpg" alt="Heading Image">
         </div>
         <p>
         Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have
-        forced their councils to scrap the undemocratic Cabinet model, based on the Leader's feudal patronage.
+        forced their councils to scrap the undemocratic Cabinet model, which relies on the Leader's patronage.
         </p>
         <p>
-        It's Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative
+        <p>
+        Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative
         committee system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed
         people who aren't aligned to any party at all.
         </p>
@@ -54,23 +56,27 @@
         <b>ABOUT CHRIS TWELLS</b>
         </p>
         <p>
-            Chris was elected as the new District Councillor for Tetbury with Upton ward in
-            May 2023, winning the seat from fourth place with the biggest swing of the 2023 elections.
-            He sits as a Tetbury & District Independent.
+        <p>
+        Chris was elected as the new District Councillor for Tetbury with Upton ward in
+        May 2023, winning the seat from fourth place with the biggest swing of the 2023 elections.
+        He sits as a Tetbury & District Independent.
         </p>
         <p>
-            Chris studied Law at the University of York and takes a keen interest in constitutional and electoral law.
-            He has ten years' experience as a professional political campaigner and community
-            organiser, running successful campaigns in some of the most deprived areas of England.
+        <p>
+        Chris studied Law at the University of York and takes a keen interest in constitutional and electoral law.
+        He has ten years' experience as a professional political campaigner and community organiser, running
+        successful campaigns in some of the most deprived areas of England.
         </p>
+        <p>
+        <p>
         <dl>
-            <dt>Email</dt>
+            <dt>Get in touch with Chris:</dt>
             <dd>
-                <a href="mailto:chris.twells@cotswold.gov.uk">
-                    chris.twells@cotswold.gov.uk
-                </a>
-            </dd>
-        </dl>
+            <a href="mailto:chris.twells@cotswold.gov.uk">
+            chris.twells@cotswold.gov.uk
+            </a>
+    </dd>
+    </dl>
     </div>
 </body>
 </html>
