--- a/index.html
+++ b/index.html
@@ -5,76 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
-    <link rel="icon" type="image/x-icon" href="/icon.svg">
-    <title>Our Cotswolds</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="icon.svg">
+    <title>Jamie Twells</title>
 </head>
 
 <body>
-    <header>
-        <h1>Our Cotswolds</h1>
-    </header>
-    <main>
-        <p>
-            On Thursday 2<sup>nd</sup> May 2024, voters in the Cotswold District could have an opportunity to vote in a
-            referendum to replace the 'Leader and Cabinet' system with the Modern Committee model. The District
-            Council is currently set up so that all decision-making power is concentrated in the hands of the Leader
-            and seven Lib Dem councillors (all appointed by the Leader), called the Cabinet.
-        </p>
-        <p>
-            The other 26 councillors - Liberal Democrats, Conservatives, Greens and Independents - are locked out.
-            Ordinary Cotswold voters can, however, use a provision of the Localism Act to ensure our council is run
-            on a more democratic basis.
-        </p>
-        <p>
-            3,502 signatures from residents of the Cotswold District (one twentieth of the total) would, by law, trigger
-            a referendum
-            and provide for an inclusive debate about scrapping the 'Leader and Cabinet' model and replacing it with the
-            fairer and
-            more democratic <a href='https://itsoursheffield.co.uk/referendum-faqs/' target='_blank'
-                rel='noreferrer'>Modern Committee system</a>.
-        </p>
-        <img src="/image1.jpg" alt="Heading Image">
-        <p>
-            Cross-party efforts in Sheffield, Bristol and elsewhere have led the way - grassroots campaigners have
-            forced their councils to scrap the undemocratic Cabinet model, which relies on the Leader's patronage.
-        </p>
-        <p>
-            Our Cotswolds is an independent group campaigning to raise awareness of the benefits of a collaborative
-            committee system. We're backed by Conservative, Liberal Democrat, Labour and Green supporters - and indeed
-            people who aren't aligned to any party at all.
-        </p>
+        <header>
+            <h1>Jamie Twells</h1>
+        </header>
 
-        <h2>About Chris Twells</h2>
-
-        <p>
-            Chris was elected as the new District Councillor for Tetbury with Upton ward in
-            May 2023, winning his seat from fourth place with the biggest swing of the election.
-            He sits as a Tetbury & District Independent and does not take a party whip.
-        </p>
-        <p>
-            Chris studied Law at the University of York and takes a keen interest in constitutional and electoral law.
-            He has ten years' experience as a professional political campaigner and community organiser, running
-            successful campaigns in some of the most deprived areas of England.
-        </p>
-    </main>
-    <footer>
-        <dl>
-            <dt>Get in touch:</dt>
-            <dd>
-                <a href="mailto:chris.twells@cotswold.gov.uk">
-                    chris.twells@cotswold.gov.uk
-                </a>
-            </dd>
-        </dl>
-    </footer>
-    <aside>
-        <h2>Back the campaign today</h2>
-        <p>
-            <a href='https://docs.google.com/forms/d/e/1FAIpQLScyEKVl2H7UZwr2UksVBazRf-jbHPwunpczEigXcQrbk1Vbrw/viewform'
-                target='_blank' rel='noreferrer'>Sign the petition here in less than one minute</a>
-        </p>
-    </aside>
+        <main>
+           <p>Hello, World</p>
+        </main>
 </body>
 
 </html>
